--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "esbuild": "^0.24.2",
     "esbuild-plugin-copy": "^2.1.1",
     "eslint": "^9.37.0",
+    "eslint-plugin-sonarjs": "3.0.5",
     "globals": "^15.15.0",
     "linkedom": "^0.18.12",
     "typescript": "^5.9.3"
