--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "esbuild-plugin-copy": "^2.1.1",
     "eslint": "^9.37.0",
     "eslint-plugin-sonarjs": "3.0.5",
+    "fast-check": "^3.23.1",
     "globals": "^15.15.0",
     "jsdom": "^27.1.0",
     "linkedom": "^0.18.12",
